Update Common.dll. Get rid of ComparerType because IComparer should be set on the view, not the ColumnInfo.

--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -38,23 +38,18 @@
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
       <ColumnInfos>
-        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
-        </ColumnInfo>
+        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
@@ -67,29 +62,23 @@
         <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
       <ColumnInfos>
-        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
-        </ColumnInfo>
+        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Compressed Size" Property="CompressedSize" PrimaryColumn="false">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="Common" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
