--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -41,23 +41,18 @@
         <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
       <ColumnInfos>
-        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
-        </ColumnInfo>
+        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
@@ -67,29 +62,23 @@
     </ChildResourceRetriever>
     <ChildResourceRetriever Name="CompressedFileRetriever">
       <ColumnInfos>
-        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
-        </ColumnInfo>
+        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Compressed Size" Property="CompressedSize" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
-          <ComparerType Assembly="SharpFile" Type="Common.General.StringLogicalComparer" />
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
