Don't show size for folders. Preliminary work for custom views for each child resource retriever.

--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -37,6 +37,8 @@
   </ResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
+      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
+      <View Name="ListView" />
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
@@ -55,12 +57,13 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
     </ChildResourceRetriever>
     <ChildResourceRetriever Name="CompressedFileRetriever">
+      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
       <MethodDelegateType Method="IsCompressedFile">
         <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
+      <View Name="ListView" />
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
@@ -84,7 +87,14 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
     </ChildResourceRetriever>
   </ChildResourceRetrievers>
+  <Views>
+    <View Name="ListView">
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.ListView" />
+      <ComparerType>
+        <FullyQualifiedType Assembly="SharpFile.UI" Type="SharpFile.UI.ListViewItemComparer" />
+      </ComparerType>
+    </View>
+  </Views>
 </Settings>
