--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -37,6 +37,8 @@
   </ResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
+      <View Name="ListView" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.FileRetriever" />
       <MethodDelegateType Method="DefaultCustomMethod">
         <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
@@ -58,9 +60,13 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.FileRetriever" />
     </ChildResourceRetriever>
     <ChildResourceRetriever Name="CompressedFileRetriever">
+      <View Name="ListView" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
+      <MethodDelegateType Method="IsCompressedFile">
+        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+      </MethodDelegateType>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
@@ -84,10 +90,14 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
-      <MethodDelegateType Method="IsCompressedFile">
-        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
-      </MethodDelegateType>
     </ChildResourceRetriever>
   </ChildResourceRetrievers>
+  <Views>
+    <View Name="ListView">
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.ListView" />
+      <ComparerType>
+        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.UI.ListViewItemComparer" />
+      </ComparerType>
+    </View>
+  </Views>
 </Settings}
