Instantiate objects with generic method. Add MediaListView.

--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -37,7 +37,7 @@
   </ResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
-      <View Name="ListView" />
+      <View>ListView</View>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.FileRetriever" />
       <MethodDelegateType Method="DefaultCustomMethod">
         <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
@@ -62,7 +62,7 @@
       </ColumnInfos>
     </ChildResourceRetriever>
     <ChildResourceRetriever Name="CompressedFileRetriever">
-      <View Name="ListView" />
+      <View>ListView</View>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
       <MethodDelegateType Method="IsCompressedFile">
         <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
@@ -95,9 +95,7 @@
   <Views>
     <View Name="ListView">
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.ListView" />
-      <ComparerType>
-        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.UI.ListViewItemComparer" />
-      </ComparerType>
+      <ComparerType Assembly="SharpFile" Type="SharpFile.UI.ListViewItemComparer" />
     </View>
   </Views>
-</Settings}
+</Settings>
