--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -4,10 +4,10 @@
   <Height>500</Height>
   <SplitterPercentage>50</SplitterPercentage>
   <DirectoriesSortedFirst>true</DirectoriesSortedFirst>
-	<Logger>
-		<File>log.txt</File>
-		<LogLevel>Verbose</LogLevel>
-	</Logger>
+  <Logger>
+    <File>log.txt</File>
+    <LogLevel>Verbose</LogLevel>
+  </Logger>
   <Icons>
     <ShowOverlay>true</ShowOverlay>
     <Extensions>
@@ -38,7 +38,7 @@
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
       <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
-      <View Name="ListView" />
+      <View>ListView</View>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
@@ -63,7 +63,7 @@
       <MethodDelegateType Method="IsCompressedFile">
         <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
-      <View Name="ListView" />
+      <View>ListView</View>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
@@ -92,9 +92,7 @@
   <Views>
     <View Name="ListView">
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.ListView" />
-      <ComparerType>
-        <FullyQualifiedType Assembly="SharpFile.UI" Type="SharpFile.UI.ListViewItemComparer" />
-      </ComparerType>
+      <ComparerType Assembly="SharpFile.UI" Type="SharpFile.UI.ListViewItemComparer" />
     </View>
   </Views>
 </Settings>
