--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -85,6 +85,9 @@
     <Compile Include="MdiParent.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MediaListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="ProgressDisk.cs">
       <SubType>UserControl</SubType>
