More work on MediaListView.

--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -23,6 +23,7 @@
   <ResourceRetrievers>
     <ResourceRetriever Name="DriveRetriever">
       <ChildResourceRetrievers>
+        <ChildResourceRetriever>MediaFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
@@ -37,8 +38,6 @@
   </ResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
-      <View>ListView</View>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
@@ -57,13 +56,36 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
+      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
+      <View>ListView</View>
     </ChildResourceRetriever>
-    <ChildResourceRetriever Name="CompressedFileRetriever">
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
-      <MethodDelegateType Method="IsCompressedFile">
+    <ChildResourceRetriever Name="MediaFileRetriever">
+      <ColumnInfos>
+        <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
+        <ColumnInfo Text="Ext" Property="Extension" PrimaryColumn="false" />
+        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+          <MethodDelegateType Method="GetHumanReadableSize">
+            <FullyQualifiedType Assembly="Common" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+          <MethodDelegateType Method="GetDateTimeShortDateString">
+            <FullyQualifiedType Assembly="Common" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+          <MethodDelegateType Method="GetDateTimeShortTimeString">
+            <FullyQualifiedType Assembly="Common" Type="Common.General" />
+          </MethodDelegateType>
+        </ColumnInfo>
+      </ColumnInfos>
+      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
+      <View>MediaListView</View>
+      <MethodDelegateType Method="IsMediaFile">
         <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
-      <View>ListView</View>
+    </ChildResourceRetriever>
+    <ChildResourceRetriever Name="CompressedFileRetriever">
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
@@ -87,11 +109,20 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
+      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
+      <MethodDelegateType Method="IsCompressedFile">
+        <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+      </MethodDelegateType>
+      <View>ListView</View>
     </ChildResourceRetriever>
   </ChildResourceRetrievers>
   <Views>
     <View Name="ListView">
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.ListView" />
+      <ComparerType Assembly="SharpFile.UI" Type="SharpFile.UI.ListViewItemComparer" />
+    </View>
+    <View Name="MediaListView">
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.MediaListView" />
       <ComparerType Assembly="SharpFile.UI" Type="SharpFile.UI.ListViewItemComparer" />
     </View>
   </Views>
