Investigate using a background thread to add item range.

--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -44,17 +44,17 @@
       </MethodDelegateType>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
-        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+        <ColumnInfo Text="Size" Property="Size">
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Date" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Time" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
@@ -69,22 +69,22 @@
       </MethodDelegateType>
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
-        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+        <ColumnInfo Text="Size" Property="Size">
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Compressed Size" Property="CompressedSize" PrimaryColumn="false">
+        <ColumnInfo Text="Compressed Size" Property="CompressedSize">
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Date" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Time" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
