--- a/SharpFile/SharpFile.Infrastructure/Resources/settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/settings.config
@@ -40,17 +40,17 @@
     <ChildResourceRetriever Name="FileRetriever">
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
-        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+        <ColumnInfo Text="Size" Property="Size">
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Date" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Time" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
@@ -62,24 +62,24 @@
     <ChildResourceRetriever Name="MediaFileRetriever">
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
-        <ColumnInfo Text="Ext" Property="Extension" PrimaryColumn="false" />
-        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+        <ColumnInfo Text="Ext" Property="Extension" />
+        <ColumnInfo Text="Size" Property="Size">
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Date" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Time" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
+      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.MediaFileRetriever" />
       <View>MediaListView</View>
       <MethodDelegateType Method="IsMediaFile">
         <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
@@ -88,22 +88,22 @@
     <ChildResourceRetriever Name="CompressedFileRetriever">
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
-        <ColumnInfo Text="Size" Property="Size" PrimaryColumn="false">
+        <ColumnInfo Text="Size" Property="Size">
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Compressed Size" Property="CompressedSize" PrimaryColumn="false">
+        <ColumnInfo Text="Compressed Size" Property="CompressedSize">
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Date" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Date" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
-        <ColumnInfo Text="Time" Property="LastWriteTime" PrimaryColumn="false">
+        <ColumnInfo Text="Time" Property="LastWriteTime">
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
