--- a/SharpFile/SharpFile.IO/SharpFile.IO.csproj
+++ b/SharpFile/SharpFile.IO/SharpFile.IO.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -69,6 +70,7 @@
     <Compile Include="Retrievers\CompressedFileRetrievers\ReadWriteCompressedFileRetriever.cs" />
     <Compile Include="Retrievers\DriveRetriever.cs" />
     <Compile Include="Retrievers\FileRetriever.cs" />
+    <Compile Include="Retrievers\MediaFileRetriever.cs" />
     <Compile Include="Retrievers\NetworkDriveRetriever.cs" />
     <Compile Include="ChildResources\RootDirectoryInfo.cs" />
   </ItemGroup>
