Specify whether to show parent/root directories.

--- a/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
+++ b/SharpFile/SharpFile.Infrastructure/Resources/ilmerge_settings.config
@@ -4,6 +4,8 @@
   <Height>500</Height>
   <SplitterPercentage>50</SplitterPercentage>
   <DirectoriesSortedFirst>true</DirectoriesSortedFirst>
+  <ShowParentDirectory>true</ShowParentDirectory>
+  <ShowRootDirectory>false</ShowRootDirectory>
   <Logger>
     <File>log.txt</File>
     <LogLevel>Verbose</LogLevel>
