Make sure paths have sane defaults when there are no settings loaded.

--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -143,13 +143,22 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
+       Other similar extension points exist, see Microsoft.Common.targets. -->
+  <Target Name="BeforeBuild" />
+  <!--http://blogs.msdn.com/jomo_fisher/archive/2006/03/05/544144.aspx-->
+  <!--http://www.hanselman.com/blog/MixingLanguagesInASingleAssemblyInVisualStudioSeamlesslyWithILMergeAndMSBuild.aspx-->
+  <Target Name="ILMerge">
+    <CreateItem Include="@(ReferencePath)" Condition="'%(CopyLocal)'=='true'">
+      <Output TaskParameter="Include" ItemName="IlmergeAssemblies" />
+    </CreateItem>
+    <Message Text="MERGING: @(IlmergeAssemblies->'%(Filename)')" Importance="High" />
+    <!--<Exec Command="&quot;$(ProjectDir)Tools\Ilmerge.exe&quot; /out:@(MainAssembly) &quot;@(IntermediateAssembly)&quot; @(IlmergeAssemblies->'&quot;%(FullPath)&quot;', ' ')" />-->
   </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <Target Name="_CopyFilesMarkedCopyLocal"/> 
   <PropertyGroup>
+    <BuildDependsOn>
+    	ILMerge;
+    </BuildDependsOn>
     <PreBuildEvent>
     </PreBuildEvent>
     <PostBuildEvent>rem $(ProjectDir)post_build.bat $(ProjectDir) $(TargetDir) $(ConfigurationName)</PostBuildEvent>
