--- a/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
+++ b/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
@@ -14,6 +14,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,6 +43,9 @@
       <HintPath>..\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -55,12 +59,9 @@
     <Compile Include="Settings\DualParentSettings.cs" />
     <Compile Include="FullyQualifiedMethod.cs" />
     <Compile Include="FullyQualifiedType.cs" />
-    <Compile Include="Interfaces\IChildResource.cs" />
     <Compile Include="Interfaces\IChildResourceRetriever.cs" />
     <Compile Include="Settings\IconSettings.cs" />
-    <Compile Include="Interfaces\IFileContainer.cs" />
     <Compile Include="Interfaces\IViewComparer.cs" />
-    <Compile Include="Interfaces\IResource.cs" />
     <Compile Include="Interfaces\IResourceRetriever.cs" />
     <Compile Include="Interfaces\IView.cs" />
     <Compile Include="Settings\MdiParentSettings.cs" />
