--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -73,19 +73,17 @@
     <Compile Include="DualParent.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MdiChild.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="FileBrowser.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ListView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="MdiParent.cs">
+    <Compile Include="MdiChild.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MediaListView.cs">
+    <Compile Include="MdiParent.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="ProgressDisk.cs">
@@ -147,6 +145,9 @@
       <ProductName>.NET Framework 3.5</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
