--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -55,6 +55,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\Common.dll</HintPath>
     </Reference>
+    <Reference Include="DynamicUtilities, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\DynamicUtilities.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.85.4.369, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\ICSharpCode.SharpZipLib.dll</HintPath>
@@ -83,9 +87,11 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Infrastructure\ChildResourceRetrievers.cs" />
+    <Compile Include="Infrastructure\FileSystemEnumerator.cs" />
     <Compile Include="Infrastructure\FileSystemWatcher.cs" />
     <Compile Include="Infrastructure\FullyQualifiedMethod.cs" />
     <Compile Include="Infrastructure\FullyQualifiedType.cs" />
+    <Compile Include="Infrastructure\Interfaces\IChildResource.cs" />
     <Compile Include="Infrastructure\Interfaces\IChildResourceRetriever.cs" />
     <Compile Include="Infrastructure\Interfaces\IResourceRetriever.cs" />
     <Compile Include="Infrastructure\Interfaces\IView.cs" />
@@ -103,6 +109,10 @@
     <Compile Include="Infrastructure\Settings\IconSettings.cs" />
     <Compile Include="Infrastructure\Settings\MdiParentSettings.cs" />
     <Compile Include="Infrastructure\Settings\PanelSettings.cs" />
+    <Compile Include="Infrastructure\Win32.cs" />
+    <Compile Include="IO\ChildResources\DirectoryInfo.cs" />
+    <Compile Include="IO\ChildResources\FileInfo.cs" />
+    <Compile Include="IO\ChildResources\FileSystemInfo.cs" />
     <Compile Include="IO\ChildResources\ParentDirectoryInfo.cs" />
     <Compile Include="IO\ChildResources\RootDirectoryInfo.cs" />
     <Compile Include="IO\ExtensionMethods\DirectoryInfoExtensionMethods.cs" />
