--- a/Infrastructure/Resources/ilmerge_settings.config
+++ b/Infrastructure/Resources/ilmerge_settings.config
@@ -22,21 +22,21 @@
       <Extension>.icn</Extension>
     </Extensions>
   </Icons>
-  <ResourceRetrievers>
-    <ResourceRetriever Name="DriveRetriever">
+  <ParentResourceRetrievers>
+    <ParentResourceRetriever Name="DriveRetriever">
       <ChildResourceRetrievers>
         <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.DriveRetriever" />
-    </ResourceRetriever>
-    <ResourceRetriever Name="NetworkDriveRetriever">
+    </ParentResourceRetriever>
+    <ParentResourceRetriever Name="NetworkDriveRetriever">
       <ChildResourceRetrievers>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.NetworkDriveRetriever" />
-    </ResourceRetriever>
-  </ResourceRetrievers>
+    </ParentResourceRetriever>
+  </ParentResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
       <View>ListView</View>
