--- a/trunk/Infrastructure/Resources/settings.config
+++ b/trunk/Infrastructure/Resources/settings.config
@@ -22,22 +22,22 @@
       <Extension>.icn</Extension>
     </Extensions>
   </Icons>
-  <ResourceRetrievers>
-    <ResourceRetriever Name="DriveRetriever">
+  <ParentResourceRetrievers>
+    <ParentResourceRetriever Name="DriveRetriever">
       <ChildResourceRetrievers>
         <ChildResourceRetriever>MediaFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.DriveRetriever" />
-    </ResourceRetriever>
-    <ResourceRetriever Name="NetworkDriveRetriever">
+    </ParentResourceRetriever>
+    <ParentResourceRetriever Name="NetworkDriveRetriever">
       <ChildResourceRetrievers>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.NetworkDriveRetriever" />
-    </ResourceRetriever>
-  </ResourceRetrievers>
+    </ParentResourceRetriever>
+  </ParentResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
       <ColumnInfos>
