Update FullyQualifiedAssembly in settings. Bug: 56.

--- a/Infrastructure/Resources/settings.config
+++ b/Infrastructure/Resources/settings.config
@@ -29,13 +29,13 @@
         <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.DriveRetriever" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.DriveRetriever" />
     </ParentResourceRetriever>
     <ParentResourceRetriever Name="NetworkDriveRetriever">
       <ChildResourceRetrievers>
         <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
       </ChildResourceRetrievers>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.NetworkDriveRetriever" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.NetworkDriveRetriever" />
     </ParentResourceRetriever>
   </ParentResourceRetrievers>
   <ChildResourceRetrievers>
@@ -58,7 +58,7 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.FileRetriever" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.FileRetriever" />
       <View>ListView</View>
     </ChildResourceRetriever>
     <ChildResourceRetriever Name="MediaFileRetriever">
@@ -81,10 +81,10 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.MediaFileRetriever" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.MediaFileRetriever" />
       <View>MediaListView</View>
       <MethodDelegateType Method="IsMediaFile">
-        <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
     </ChildResourceRetriever>
     <ChildResourceRetriever Name="CompressedFileRetriever">
@@ -111,9 +111,9 @@
           </MethodDelegateType>
         </ColumnInfo>
       </ColumnInfos>
-      <FullyQualifiedType Assembly="SharpFile.IO" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
+      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.CompressedFileRetrievers.ReadOnlyCompressedFileRetriever" />
       <MethodDelegateType Method="IsCompressedFile">
-        <FullyQualifiedType Assembly="SharpFile.Infrastructure" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
+        <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.Infrastructure.ChildResourceRetrievers" />
       </MethodDelegateType>
       <View>ListView</View>
     </ChildResourceRetriever>
@@ -121,11 +121,11 @@
   <Views>
     <View Name="ListView">
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.ListView" />
-      <ComparerType Assembly="SharpFile.UI" Type="SharpFile.UI.ListViewItemComparer" />
+      <ComparerType Assembly="SharpFile" Type="SharpFile.UI.ListViewItemComparer" />
     </View>
     <View Name="MediaListView">
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.MediaListView" />
-      <ComparerType Assembly="SharpFile.UI" Type="SharpFile.UI.ListViewItemComparer" />
+      <ComparerType Assembly="SharpFile" Type="SharpFile.UI.ListViewItemComparer" />
     </View>
   </Views>
 </Settings>
