--- a/trunk/Infrastructure/Resources/settings.config
+++ b/trunk/Infrastructure/Resources/settings.config
@@ -24,6 +24,7 @@
   </Icons>
   <ParentResourceRetrievers>
     <ParentResourceRetriever Name="DriveRetriever">
+      <!-- Specify ChildResourceRetrievers in order of priority with the default last -->
       <ChildResourceRetrievers>
         <ChildResourceRetriever>MediaFileRetriever</ChildResourceRetriever>
         <ChildResourceRetriever>CompressedFileRetriever</ChildResourceRetriever>
@@ -31,28 +32,34 @@
       </ChildResourceRetrievers>
       <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.DriveRetriever" />
     </ParentResourceRetriever>
-    <ParentResourceRetriever Name="NetworkDriveRetriever">
-      <ChildResourceRetrievers>
-        <ChildResourceRetriever>FileRetriever</ChildResourceRetriever>
-      </ChildResourceRetrievers>
-      <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.Retrievers.NetworkDriveRetriever" />
-    </ParentResourceRetriever>
   </ParentResourceRetrievers>
   <ChildResourceRetrievers>
     <ChildResourceRetriever Name="FileRetriever">
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size">
+          <ExcludeForTypes>
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.DirectoryInfo" />
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.DriveInfo" />
+          </ExcludeForTypes>
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime">
+          <ExcludeForTypes>
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.ParentDirectoryInfo" />
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.RootDirectoryInfo" />
+          </ExcludeForTypes>
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Time" Property="LastWriteTime">
+          <ExcludeForTypes>
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.ParentDirectoryInfo" />
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.RootDirectoryInfo" />
+          </ExcludeForTypes>
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="Common" Type="Common.General" />
           </MethodDelegateType>
