Add back in support for opening compressed files. Make sure that if a resource does not have a property for a specific column it still shows as an empty string.

--- a/SharpFile.csproj
+++ b/SharpFile.csproj
@@ -75,6 +75,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\Interfaces\IResourceGetter.cs" />
+    <Compile Include="IO\ChildResources\CompressedDirectoryInfo.cs" />
+    <Compile Include="IO\ChildResources\CompressedFileInfo.cs" />
+    <Compile Include="IO\Retrievers\ChildResourceRetriever.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="IO\Retrievers\CompressedFileRetrievers\ReadOnlyCompressedFileRetriever.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UI\BaseParent.cs">
       <SubType>Form</SubType>
     </Compile>
