--- a/Infrastructure/Resources/ilmerge_settings.config
+++ b/Infrastructure/Resources/ilmerge_settings.config
@@ -98,21 +98,37 @@
       <ColumnInfos>
         <ColumnInfo Text="Filename" Property="DisplayName" PrimaryColumn="true" />
         <ColumnInfo Text="Size" Property="Size">
+          <ExcludeForTypes>
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.DirectoryInfo" />
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.DriveInfo" />
+          </ExcludeForTypes>
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Compressed Size" Property="CompressedSize">
+          <ExcludeForTypes>
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.DirectoryInfo" />
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.DriveInfo" />
+          </ExcludeForTypes>
           <MethodDelegateType Method="GetHumanReadableSize">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Date" Property="LastWriteTime">
+          <ExcludeForTypes>
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.ParentDirectoryInfo" />
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.RootDirectoryInfo" />
+          </ExcludeForTypes>
           <MethodDelegateType Method="GetDateTimeShortDateString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
         </ColumnInfo>
         <ColumnInfo Text="Time" Property="LastWriteTime">
+          <ExcludeForTypes>
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.ParentDirectoryInfo" />
+            <FullyQualifiedType Assembly="SharpFile" Type="SharpFile.IO.ChildResources.RootDirectoryInfo" />
+          </ExcludeForTypes>
           <MethodDelegateType Method="GetDateTimeShortTimeString">
             <FullyQualifiedType Assembly="SharpFile" Type="Common.General" />
           </MethodDelegateType>
